--- a/main/web/css/main.css
+++ b/main/web/css/main.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F8F8F8;
+  background-color: #ffffff;
   font-family: 'Open Sans', sans-serif;
   font-size: 14px;
   font-weight: normal;
@@ -11,12 +11,12 @@ h1, p {
   color: #333;
 }
 
-#sample_container_id {
+#contenedor {
   width: 100%;
   height: 400px;
   position: relative;
   border: 1px solid #ccc;
-  background-color: #fff;
+  background-color: #80EAFF;
 }
 
 
